opam-version: "1.2"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/jsonaf"
bug-reports: "https://github.com/inhabitedtype/jsonaf/issues"
dev-repo: "https://github.com/inhabitedtype/jsonaf.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
  "alcotest" {test}
  "angstrom" {>= "0.7.0"}
  "faraday"  {>= "0.5.0"}
  "result"
]
available: [ ocaml-version >= "4.03.0" ]
